[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/world.gd" type="Script" id=1]
[ext_resource path="res://images/coin.png" type="Texture" id=2]
[ext_resource path="res://images/food.png" type="Texture" id=3]
[ext_resource path="res://images/science.png" type="Texture" id=4]
[ext_resource path="res://scenes/interface.gd" type="Script" id=5]

[node name="world" type="Node2D"]
z_index = 1000
script = ExtResource( 1 )

[node name="InterfaceLayer" type="CanvasLayer" parent="."]

[node name="Interface" type="Control" parent="InterfaceLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SelectionBar" type="Panel" parent="InterfaceLayer/Interface"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -150.0
margin_right = 400.0
rect_min_size = Vector2( 300, 100 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CityInfo" type="Panel" parent="InterfaceLayer/Interface/SelectionBar"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 300, 150 )

[node name="CityName" type="Label" parent="InterfaceLayer/Interface/SelectionBar/CityInfo"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 10.0
margin_top = 5.0
margin_right = 76.0
margin_bottom = 19.0
text = "City Name"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Assign" type="Button" parent="InterfaceLayer/Interface/SelectionBar/CityInfo"]
margin_left = 127.0
margin_top = 101.0
margin_right = 187.0
margin_bottom = 131.0
text = "Assign"

[node name="Population" type="Label" parent="InterfaceLayer/Interface/SelectionBar/CityInfo"]
margin_left = 125.0
margin_top = 36.0
margin_right = 165.0
margin_bottom = 50.0
text = "Pops: 1 (2)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Growth" type="Label" parent="InterfaceLayer/Interface/SelectionBar/CityInfo"]
margin_left = 125.0
margin_top = 56.0
margin_right = 179.0
margin_bottom = 70.0
text = "Growth: "

[node name="Label" type="Label" parent="InterfaceLayer/Interface/SelectionBar/CityInfo"]
margin_left = 125.0
margin_top = 76.0
margin_right = 165.0
margin_bottom = 90.0
text = "Workers: 0"

[node name="Production" type="Panel" parent="InterfaceLayer/Interface/SelectionBar/CityInfo"]
modulate = Color( 1, 0.74902, 0, 1 )
margin_left = 28.0
margin_top = 41.0
margin_right = 68.0
margin_bottom = 81.0

[node name="UnitInfo" type="Panel" parent="InterfaceLayer/Interface/SelectionBar"]
modulate = Color( 0.0313726, 1, 0, 1 )
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -100.0
margin_top = -150.0
rect_min_size = Vector2( 100, 150 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="InterfaceLayer/Interface/SelectionBar/UnitInfo"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="InterfaceLayer/Interface/SelectionBar/UnitInfo/VBoxContainer"]
margin_right = 100.0
margin_bottom = 20.0
rect_min_size = Vector2( 0, 20 )
text = "Unit"
align = 1
valign = 1

[node name="Type" type="Label" parent="InterfaceLayer/Interface/SelectionBar/UnitInfo/VBoxContainer"]
margin_top = 24.0
margin_right = 100.0
margin_bottom = 44.0
rect_min_size = Vector2( 100, 20 )
text = "---"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MP" type="Label" parent="InterfaceLayer/Interface/SelectionBar/UnitInfo/VBoxContainer"]
margin_top = 48.0
margin_right = 100.0
margin_bottom = 68.0
rect_min_size = Vector2( 100, 20 )
text = "MA: -/-"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AbilitiesPanel" type="HBoxContainer" parent="InterfaceLayer/Interface/SelectionBar"]
margin_top = -40.0
margin_right = 250.0
margin_bottom = 20.0
rect_min_size = Vector2( 200, 60 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="button1" type="TextureButton" parent="InterfaceLayer/Interface/SelectionBar/AbilitiesPanel"]
visible = false
margin_top = 10.0
margin_right = 40.0
margin_bottom = 50.0
rect_min_size = Vector2( 40, 40 )
size_flags_horizontal = 4
size_flags_vertical = 4
expand = true

[node name="button2" type="TextureButton" parent="InterfaceLayer/Interface/SelectionBar/AbilitiesPanel"]
visible = false
margin_left = 44.0
margin_top = 10.0
margin_right = 84.0
margin_bottom = 50.0
rect_min_size = Vector2( 40, 40 )
size_flags_horizontal = 4
size_flags_vertical = 4
expand = true

[node name="button3" type="TextureButton" parent="InterfaceLayer/Interface/SelectionBar/AbilitiesPanel"]
visible = false
margin_left = 88.0
margin_top = 10.0
margin_right = 128.0
margin_bottom = 50.0
rect_min_size = Vector2( 40, 40 )
size_flags_horizontal = 4
size_flags_vertical = 4
expand = true

[node name="button4" type="TextureButton" parent="InterfaceLayer/Interface/SelectionBar/AbilitiesPanel"]
visible = false
margin_left = 132.0
margin_top = 10.0
margin_right = 172.0
margin_bottom = 50.0
rect_min_size = Vector2( 40, 40 )
size_flags_horizontal = 4
size_flags_vertical = 4
expand = true

[node name="ResourceBar" type="Panel" parent="InterfaceLayer/Interface"]
margin_right = 500.0
margin_bottom = 20.0
rect_min_size = Vector2( 500, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="InterfaceLayer/Interface/ResourceBar"]
anchor_left = 0.025
anchor_right = 0.05
margin_right = 387.5
margin_bottom = 20.0
rect_min_size = Vector2( 400, 16 )
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="science" type="Control" parent="InterfaceLayer/Interface/ResourceBar/HBoxContainer"]
margin_top = 2.0
margin_right = 62.0
margin_bottom = 18.0
rect_min_size = Vector2( 62, 16 )
size_flags_horizontal = 0
size_flags_vertical = 4

[node name="icon" type="TextureRect" parent="InterfaceLayer/Interface/ResourceBar/HBoxContainer/science"]
margin_right = 16.0
margin_bottom = 16.0
rect_min_size = Vector2( 16, 16 )
size_flags_horizontal = 0
size_flags_vertical = 4
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="number" type="Label" parent="InterfaceLayer/Interface/ResourceBar/HBoxContainer/science"]
margin_left = 20.0
margin_right = 64.0
margin_bottom = 16.0
rect_min_size = Vector2( 44, 16 )
text = "0"
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="gold" type="Control" parent="InterfaceLayer/Interface/ResourceBar/HBoxContainer"]
margin_left = 72.0
margin_top = 2.0
margin_right = 134.0
margin_bottom = 18.0
rect_min_size = Vector2( 62, 16 )
size_flags_horizontal = 0
size_flags_vertical = 4

[node name="icon" type="TextureRect" parent="InterfaceLayer/Interface/ResourceBar/HBoxContainer/gold"]
margin_right = 16.0
margin_bottom = 16.0
rect_min_size = Vector2( 16, 16 )
size_flags_horizontal = 0
size_flags_vertical = 4
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="number" type="Label" parent="InterfaceLayer/Interface/ResourceBar/HBoxContainer/gold"]
margin_left = 20.0
margin_right = 64.0
margin_bottom = 16.0
rect_min_size = Vector2( 44, 16 )
text = "0"
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="food" type="Control" parent="InterfaceLayer/Interface/ResourceBar/HBoxContainer"]
margin_left = 144.0
margin_top = 2.0
margin_right = 206.0
margin_bottom = 18.0
rect_min_size = Vector2( 62, 16 )
size_flags_horizontal = 0
size_flags_vertical = 4

[node name="icon" type="TextureRect" parent="InterfaceLayer/Interface/ResourceBar/HBoxContainer/food"]
margin_right = 16.0
margin_bottom = 16.0
rect_min_size = Vector2( 16, 16 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="number" type="Label" parent="InterfaceLayer/Interface/ResourceBar/HBoxContainer/food"]
margin_left = 20.0
margin_right = 64.0
margin_bottom = 16.0
text = "0"
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EndTurn" type="Button" parent="InterfaceLayer/Interface"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -80.0
margin_top = -50.0
rect_min_size = Vector2( 80, 50 )
text = "End Turn"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TurnCount" type="Label" parent="InterfaceLayer/Interface/EndTurn"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -20.0
margin_top = -65.0
margin_right = 24.0
margin_bottom = -51.0
text = "Turn: 1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="tilemap" type="Node2D" parent="."]

[node name="units" type="Node2D" parent="."]

[node name="structures" type="Node2D" parent="."]

[node name="Camera2D" type="Camera2D" parent="."]
current = true
limit_left = 0
limit_top = 0
limit_smoothed = true
drag_margin_left = 0.0
drag_margin_top = 0.0
drag_margin_right = 0.0
drag_margin_bottom = 0.0

[node name="other" type="Node2D" parent="."]
